clusters/production/platform/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dashboard.k8s.classic-computing.de
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts: [dashboard.k8s.classic-computing.de]
      secretName: dashboard-tls
  rules:
    - host: dashboard.k8s.classic-computing.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port: { number: 80 }
